@@ -1,0 +1,10 @@
+BEGIN:VCALENDAR
+VERSION:1.0
+BEGIN:VEVENT
+DTSTART:20121201T210000
+DTEND:20121201T220000
+LOCATION;ENCODING=QUOTED-PRINTABLE:Mississippi Studios (3939 N Mississippi Ave., Portland, OR)
+DESCRIPTION;ENCODING=QUOTED-PRINTABLE:
+SUMMARY;ENCODING=QUOTED-PRINTABLE:Battleme, My Goodness, the Ax
+PRIORITY:3END:VEVENT
+END:VCALENDAR
